--- a/src/SellerCloud.Results/SellerCloud.Results.csproj
+++ b/src/SellerCloud.Results/SellerCloud.Results.csproj
@@ -7,4 +7,8 @@
     <Authors>SellerCloud</Authors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
