--- a/src/SellerCloud.Results/SellerCloud.Results.csproj
+++ b/src/SellerCloud.Results/SellerCloud.Results.csproj
@@ -1,10 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Company>SellerCloud</Company>
     <Authors>SellerCloud</Authors>
+  </PropertyGroup>
+  
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8620;CS8613;CS8629;CS8625;CS8619;CS8614;CS8604;CS8601;CS8714;CS8653;CS8634;CS8621;CS8645</WarningsAsErrors>
   </PropertyGroup>
 
 </Project>
