--- a/test/SellerCloud.Results.Tests/SellerCloud.Results.Tests/SellerCloud.Results.Tests.csproj
+++ b/test/SellerCloud.Results.Tests/SellerCloud.Results.Tests/SellerCloud.Results.Tests.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8620;CS8613;CS8629;CS8625;CS8619;CS8614;CS8604;CS8601;CS8714;CS8653;CS8634;CS8621;CS8645</WarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup Label="Nuget References">
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
