--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,5 +20,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.108
+    - name: Install dependencies
+      run: dotnet restore './src/SellerCloud.Results.sln' /clp:ErrorsOnly
     - name: Build
       run: dotnet build './src/SellerCloud.Results.sln' /clp:ErrorsOnly --configuration Release --no-restore
