--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Install dependencies
       run: dotnet restore './src/SellerCloud.Results.sln' /clp:ErrorsOnly
     - name: Build
-      run: dotnet build './src/SellerCloud.Results.sln' /clp:ErrorsOnly --configuration Release --no-restore
+      run: dotnet build './src/SellerCloud.Results.sln' /clp:ErrorsOnly --framework netcoreapp3.0 --configuration Release --no-restore
