--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,11 +5,13 @@ on:
     branches: [ develop ]
   pull_request:
     branches: [ develop ]
+  paths:
+    - 'src/**'
 
 jobs:
   build:
 
-    runs-on: [self-hosted, windows]
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
@@ -18,4 +20,4 @@ jobs:
       with:
         dotnet-version: 3.0.103
     - name: Build with dotnet
-      run: dotnet build './src/SellerCloud.Results.sln' --configuration Release
+      run: dotnet build --configuration Release
