--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,14 +1,10 @@
-name: .NET Core
+name: .NET
 
 on:
   push:
     branches: [ develop ]
-    paths:
-    - 'src/SellerCloud.Results/**'
   pull_request:
     branches: [ develop ]
-    paths:
-    - 'src/SellerCloud.Results/**'
 
 jobs:
   build:
@@ -16,10 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup .NET Core
+    - uses: actions/checkout@v2
+    - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.0.103
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build --no-restore
