--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         dotnet-version: 3.0.103
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./src
     - name: Build
       run: dotnet build --no-restore ./src
