--- a/src/SellerCloud.Results/SellerCloud.Results.csproj
+++ b/src/SellerCloud.Results/SellerCloud.Results.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net45;net461;net48</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Company>SellerCloud</Company>
     <Authors>SellerCloud</Authors>
